# clicky-linux

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
clicky/: app.py  config.py  state.py  state_store.py
clicky/input/: hotkey.py
clicky/llm/: claude.py  claude_code.py  point_parser.py  prompts.py
clicky/screen/: capture.py  monitors.py
clicky/ui/: area_selector.py  cursor.py  design.py  effects.py  overlay.py  panel.py  response_bubble.py  tray.py
docs/: SETUP_WORKER.md
scripts/: check-system.sh
worker/: package-lock.json  wrangler.toml
worker/src/: index.ts
